--- a/aula0/index.html
+++ b/aula0/index.html
@@ -1,30 +1,81 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Documento HTML</title>
+    <title>Tags básicas HTML</title>
+
+    <style>
+        p {
+            /* margin: 50px 20px 2px 10px; */
+            margin: 0 auto;
+            /* margin-top: 50px; */
+            /* margin-right: 20px; */
+            /* margin-bottom: 2px; */
+            /* margin-left: 10px; */
+            width: 300px;
+            border: 5px solid red;
+            padding: 10px;
+            box-sizing: border-box;
+        }
+
+        .texto-formatado {
+            font-family: Arial;
+            text-align: left;
+            font-size: 25px;
+            line-height: 30px;
+            color: blue;
+        }
+
+        a {
+            font-weight: bold;
+            color: red;
+            text-decoration: underline;
+        }
+    </style>
 </head>
+
 <body>
-    
-<h1>Título</h1>
-<h2>Subtítulo</h2>
 
-<p>Fiap
+    <!-- LISTA NÃO ORDENADA -->
+    <ul>
+        <li>Pão</li>
+        <li>Arroz</li>
+        <li>Feijão</li>
+    </ul>
+
+    <!-- LISTA ORDENADA -->
+    <ol>
+        <li>Tarefa 1</li>
+        <li>Tarefa 2</li>
+        <li>Tarefa 3</li>
+    </ol>
+
+    <!-- DESCRIPTION LIST -->
+    <dl>
+        <dt>Café</dt>
+        <dd>café com leite</dd>
+        <dt>Suco</dt>
+        <dd>suco integral</dd>
+    </dl>
+
+    <p>
+        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ex recusandae dolores reiciendis qui eos amet iusto
+        cum suscipit pariatur modi consequuntur laudantium atque corporis, nostrum laborum similique molestiae molestias
+        architecto.
+    </p>
 
 
+    <p class="texto-formatado">
+        Lorem ipsum <a href="wwww.google.com">dolor</a> sit amet consectetur adipisicing elit. Unde, architecto, ab
+        molestiae beatae ullam illum reiciendis nulla dolorem deleniti exercitationem omnis minus neque magni totam
+        voluptates pariatur, cupiditate obcaecati sed.
+    </p>
 
-</p>
+</body>
 
-<a href="https://www.google.com/" target="_blank">Ir para o google</a>
-
-<br/>
-
-<img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRrUMWCyGdieyAlmWXG-NBQcbIrA5pTIABNAA&usqp=CAU" width="200" alt="Imagem do São Paulo Futebol Clube"/>
-
-<br/>
-
-<button>Cadastre-se</button>
+</html>
 
 
 
