--- a/aula0/botoes.html
+++ b/aula0/botoes.html
@@ -3,16 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Doc HTML</title>
+    <title>Botões</title>
 
-    <link rel="stylesheet" href="botoes.css"
-
+    <!-- CSS EXTERNO -->
+    <link rel="stylesheet" href="css/botoes.css">
 </head>
 <body>
-    
-<button class="youtube">Subscrible</button>
-<button class="entrar">JOIN</button>
-<button class="twitter">Tweet</button>
 
+    <button class="youtube">Subscribe</button>
+    <button class="join">JOIN</button>
+    
 </body>
 </html>
